--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,9 +1,11 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Inter', sans-serif;
   color: var(--text);
   background:
